# open-xtract

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
api/: main.py
cookbook/: __init__.py  legal_extraction.py
docs/: _config.yml  index.html
examples/: README.md  advanced_pdf_processing.py  basic_extraction.py  batch_processing.py  cookbook.py  custom_provider.py  extract_paper.py  json_schema_example.py  langchain_integration.py  streamlit_grok4fast_app.py
open_xtract/: __init__.py  agent.py  cli.py  exceptions.py  main.py  processor.py  provider_map.py  retrieval.py  structured_output.py  utils.py
open_xtract/models/: __init__.py  base.py  providers.py
open_xtract/schemas/: __init__.py  types.py
open_xtract/workflows/: __init__.py  graph.py
open_xtract/workflows/nodes/: document_export.py  intelligent_grep.py  pdf_processing.py  structured_output.py
scripts/: test_endpoints.py
tests/: __init__.py  test_api.py  test_cli_main.py  test_cookbook_legal.py  test_extract.py  test_llm_create.py  test_main.py  test_openxtract.py  test_openxtract_messages.py  test_openxtract_retrieve_rerank.py  test_processor.py  test_providers.py  test_retrieval.py  test_retrieval_utils.py
web/: README.md
web/backend/: Dockerfile  pyproject.toml
web/backend/alembic/: env.py
web/backend/alembic/versions/: 001_initial.py
web/backend/app/: config.py  database.py  dependencies.py  main.py
web/backend/app/models/: __init__.py  extraction.py  provider_credential.py  schema.py  user.py
web/backend/app/routers/: __init__.py  auth.py  extractions.py  schemas.py  users.py
web/backend/app/schemas/: __init__.py  extraction.py  schema.py  user.py
web/backend/app/services/: extraction.py  log_store.py  schema_builder.py  storage.py
web/backend/app/utils/: security.py
web/docker/: .env.example  docker-compose.prod.yml  docker-compose.yml
web/docker/nginx/: nginx.conf
web/frontend/: Dockerfile  package.json
web/frontend/src/app/: layout.tsx
web/frontend/src/app/dashboard/: layout.tsx  page.tsx
web/frontend/src/app/dashboard/extractions/: page.tsx
web/frontend/src/app/dashboard/extractions/[id]/: page.tsx
web/frontend/src/app/dashboard/extractions/new/: page.tsx
web/frontend/src/app/dashboard/schemas/: page.tsx
web/frontend/src/app/dashboard/schemas/[id]/: page.tsx
web/frontend/src/app/dashboard/schemas/new/: page.tsx
web/frontend/src/lib/: api.ts
web/frontend/src/styles/: globals.css
