[project]
name = "open-xtract"
version = "0.1.0"
description = "Open-source framework that extracts structured data from PDFs. Bring your own OCR or LLM and extend to any file type."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Cole McIntosh", email = "colemcintosh6@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "pypdf>=5.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.8.0",
    "aiofiles>=24.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
vision = ["PyMuPDF>=1.24.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "pytest-mock>=3.14.0"]

[project.scripts]
open-xtract = "open_xtract:main"

[project.urls]
Homepage = "https://www.open-xtract.com/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
